--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.0"
